Update Brand name

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "MVP Front-end",
-  "name": "MVP Front-end AI saas",
+  "name": "MVP Front-end Brandlyo",
   "icons": [
     {
       "src": "favicon.ico",
